# inga

./: .gitignore  Cargo.toml  README.md
bench/: README.md  bench.inga  bench.js  bench.rs  run.sh
crates/inga-cli/: Cargo.toml
crates/inga-cli/src/: main.rs
crates/inga-cli/tests/: exec.rs  native.rs
crates/inga-codegen/: Cargo.toml
crates/inga-codegen/src/: lib.rs
crates/inga-codegen/tests/: codegen.rs
crates/inga-core/: Cargo.toml
crates/inga-core/src/: ast.rs  check.rs  diag.rs  fmt.rs  interp.rs  lexer.rs  lib.rs  modules.rs  parser.rs  span.rs  token.rs  types.rs
crates/inga-core/tests/: hover_probe.rs  integration.rs
crates/inga-lsp/: Cargo.toml
crates/inga-lsp/src/: lib.rs
crates/inga-rt/: Cargo.toml
crates/inga-rt/src/: lib.rs
docs/: SPEC.md
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/src/: extension.js
editors/vscode/syntaxes/: inga.tmLanguage.json
editors/zed/: Cargo.toml  README.md  extension.toml  extension.wasm
editors/zed/grammars/: inga.wasm
editors/zed/languages/inga/: config.toml  highlights.scm  outline.scm
editors/zed/src/: lib.rs
examples/: arena.inga  fiber_errors.inga  fibers.inga  geometry.inga  hello.inga  http_client.inga  middleware.inga  modules.inga  notes.inga  picker.inga  pokedex.inga  retry.inga  server.inga  shapes.inga  tasks.inga  user_service.inga
games/: balatro.inga  cards.inga  game.inga  jokers.inga  logic_test.inga  poker.inga  state.inga  util.inga
tree-sitter-inga/: grammar.js  package.json  tree-sitter.json
tree-sitter-inga/src/: grammar.json  node-types.json  parser.c
