[workspace]
resolver = "2"
members = [
    "crates/inga-core",
    "crates/inga-cli",
    "crates/inga-lsp",
    "crates/inga-codegen",
    "crates/inga-rt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/wingleeio/inga"

[profile.release]
lto = true
