[package]
name = "inga-lsp"
description = "Language server for Inga"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inga-core = { path = "../inga-core" }
lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
