[package]
name = "inga-rt"
description = "Native runtime for compiled Inga programs (linked as a staticlib)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
ureq = { version = "2", default-features = false, features = ["tls"] }
macroquad = { version = "0.4", default-features = false }
libc = "0.2"
